new JastAdd version