@@ -9,7 +9,7 @@ public class TypeVariable extends ReferenceType implements Cloneable {
         super.flushCache();
         toInterface_computed = false;
         toInterface_value = null;
-        involvesTypeParameters_visited = 0;
+        involvesTypeParameters_visited = -1;
         involvesTypeParameters_computed = false;
         involvesTypeParameters_initialized = false;
         memberFields_String_values = null;
@@ -20,28 +20,25 @@ public class TypeVariable extends ReferenceType implements Cloneable {
         fullName_value = null;
         lubType_computed = false;
         lubType_value = null;
-        usesTypeVariable_visited = 0;
+        usesTypeVariable_visited = -1;
         usesTypeVariable_computed = false;
         usesTypeVariable_initialized = false;
         accessibleFrom_TypeDecl_values = null;
         typeName_computed = false;
         typeName_value = null;
-        sameStructure_TypeDecl_visited = new java.util.HashMap(4);
         sameStructure_TypeDecl_values = null;
-        sameStructure_TypeDecl_computed = new java.util.HashSet(4);
-        sameStructure_TypeDecl_initialized = new java.util.HashSet(4);
-        subtype_TypeDecl_visited = new java.util.HashMap(4);
         subtype_TypeDecl_values = null;
-        subtype_TypeDecl_computed = new java.util.HashSet(4);
-        subtype_TypeDecl_initialized = new java.util.HashSet(4);
         getSubstitutedTypeBound_int_TypeDecl_values = null;
         instanceOf_TypeDecl_values = null;
+    }
+    public void flushCollectionCache() {
+        super.flushCollectionCache();
     }
      @SuppressWarnings({"unchecked", "cast"})  public TypeVariable clone() throws CloneNotSupportedException {
         TypeVariable node = (TypeVariable)super.clone();
         node.toInterface_computed = false;
         node.toInterface_value = null;
-        node.involvesTypeParameters_visited = 0;
+        node.involvesTypeParameters_visited = -1;
         node.involvesTypeParameters_computed = false;
         node.involvesTypeParameters_initialized = false;
         node.memberFields_String_values = null;
@@ -52,25 +49,19 @@ public class TypeVariable extends ReferenceType implements Cloneable {
         node.fullName_value = null;
         node.lubType_computed = false;
         node.lubType_value = null;
-        node.usesTypeVariable_visited = 0;
+        node.usesTypeVariable_visited = -1;
         node.usesTypeVariable_computed = false;
         node.usesTypeVariable_initialized = false;
         node.accessibleFrom_TypeDecl_values = null;
         node.typeName_computed = false;
         node.typeName_value = null;
-        node.sameStructure_TypeDecl_visited = new java.util.HashMap(4);
         node.sameStructure_TypeDecl_values = null;
-        node.sameStructure_TypeDecl_computed = new java.util.HashSet(4);
-        node.sameStructure_TypeDecl_initialized = new java.util.HashSet(4);
-        node.subtype_TypeDecl_visited = new java.util.HashMap(4);
         node.subtype_TypeDecl_values = null;
-        node.subtype_TypeDecl_computed = new java.util.HashSet(4);
-        node.subtype_TypeDecl_initialized = new java.util.HashSet(4);
         node.getSubstitutedTypeBound_int_TypeDecl_values = null;
         node.instanceOf_TypeDecl_values = null;
         node.in$Circle(false);
         node.is$Final(false);
-    return node;
+        return node;
     }
      @SuppressWarnings({"unchecked", "cast"})  public TypeVariable copy() {
       try {
@@ -333,11 +324,19 @@ public class TypeVariable extends ReferenceType implements Cloneable {
 
 
     public void addBodyDecl(BodyDecl node) {
-        List<BodyDecl> list = getBodyDeclList();
+        List<BodyDecl> list = (parent == null || state == null) ? getBodyDeclListNoTransform() : getBodyDeclList();
         list.addChild(node);
     }
 
     // Declared in Generics.ast at line 19
+
+
+    public void addBodyDeclNoTransform(BodyDecl node) {
+        List<BodyDecl> list = getBodyDeclListNoTransform();
+        list.addChild(node);
+    }
+
+    // Declared in Generics.ast at line 24
 
 
     public void setBodyDecl(BodyDecl node, int i) {
@@ -345,26 +344,28 @@ public class TypeVariable extends ReferenceType implements Cloneable {
         list.setChild(node, i);
     }
 
-    // Declared in Generics.ast at line 23
+    // Declared in Generics.ast at line 28
 
     public List<BodyDecl> getBodyDecls() {
         return getBodyDeclList();
     }
 
-    // Declared in Generics.ast at line 26
+    // Declared in Generics.ast at line 31
 
     public List<BodyDecl> getBodyDeclsNoTransform() {
         return getBodyDeclListNoTransform();
     }
 
-    // Declared in Generics.ast at line 30
+    // Declared in Generics.ast at line 35
 
 
      @SuppressWarnings({"unchecked", "cast"})  public List<BodyDecl> getBodyDeclList() {
-        return (List<BodyDecl>)getChild(1);
+        List<BodyDecl> list = (List<BodyDecl>)getChild(1);
+        list.getNumChild();
+        return list;
     }
 
-    // Declared in Generics.ast at line 34
+    // Declared in Generics.ast at line 41
 
 
      @SuppressWarnings({"unchecked", "cast"})  public List<BodyDecl> getBodyDeclListNoTransform() {
@@ -395,11 +396,19 @@ public class TypeVariable extends ReferenceType implements Cloneable {
 
 
     public void addTypeBound(Access node) {
-        List<Access> list = getTypeBoundList();
+        List<Access> list = (parent == null || state == null) ? getTypeBoundListNoTransform() : getTypeBoundList();
         list.addChild(node);
     }
 
     // Declared in Generics.ast at line 19
+
+
+    public void addTypeBoundNoTransform(Access node) {
+        List<Access> list = getTypeBoundListNoTransform();
+        list.addChild(node);
+    }
+
+    // Declared in Generics.ast at line 24
 
 
     public void setTypeBound(Access node, int i) {
@@ -407,26 +416,28 @@ public class TypeVariable extends ReferenceType implements Cloneable {
         list.setChild(node, i);
     }
 
-    // Declared in Generics.ast at line 23
+    // Declared in Generics.ast at line 28
 
     public List<Access> getTypeBounds() {
         return getTypeBoundList();
     }
 
-    // Declared in Generics.ast at line 26
+    // Declared in Generics.ast at line 31
 
     public List<Access> getTypeBoundsNoTransform() {
         return getTypeBoundListNoTransform();
     }
 
-    // Declared in Generics.ast at line 30
+    // Declared in Generics.ast at line 35
 
 
      @SuppressWarnings({"unchecked", "cast"})  public List<Access> getTypeBoundList() {
-        return (List<Access>)getChild(2);
+        List<Access> list = (List<Access>)getChild(2);
+        list.getNumChild();
+        return list;
     }
 
-    // Declared in Generics.ast at line 34
+    // Declared in Generics.ast at line 41
 
 
      @SuppressWarnings({"unchecked", "cast"})  public List<Access> getTypeBoundListNoTransform() {
@@ -437,9 +448,11 @@ public class TypeVariable extends ReferenceType implements Cloneable {
     protected TypeDecl toInterface_value;
     // Declared in GLBTypeFactory.jadd at line 12
  @SuppressWarnings({"unchecked", "cast"})     public TypeDecl toInterface() {
-        if(toInterface_computed)
+        if(toInterface_computed) {
             return toInterface_value;
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         toInterface_value = toInterface_compute();
         toInterface_value.setParent(this);
@@ -479,55 +492,54 @@ public class TypeVariable extends ReferenceType implements Cloneable {
     return ITj;
   }
 
-    protected int involvesTypeParameters_visited;
-    protected boolean involvesTypeParameters_computed = false;
-    protected boolean involvesTypeParameters_initialized = false;
-    protected boolean involvesTypeParameters_value;
+    // Declared in GenericMethodsInference.jrag at line 16
  @SuppressWarnings({"unchecked", "cast"})     public boolean involvesTypeParameters() {
-        if(involvesTypeParameters_computed)
+        if(involvesTypeParameters_computed) {
             return involvesTypeParameters_value;
+        }
+        ASTNode$State state = state();
         if (!involvesTypeParameters_initialized) {
             involvesTypeParameters_initialized = true;
             involvesTypeParameters_value = false;
         }
-        if (!state().IN_CIRCLE) {
-            state().IN_CIRCLE = true;
-            int num = state().boundariesCrossed;
+        if (!state.IN_CIRCLE) {
+            state.IN_CIRCLE = true;
+            int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
-            state().CIRCLE_INDEX = 1;
             do {
-                involvesTypeParameters_visited = state().CIRCLE_INDEX;
-                state().CHANGE = false;
+                involvesTypeParameters_visited = state.CIRCLE_INDEX;
+                state.CHANGE = false;
                 boolean new_involvesTypeParameters_value = involvesTypeParameters_compute();
                 if (new_involvesTypeParameters_value!=involvesTypeParameters_value)
-                    state().CHANGE = true;
+                    state.CHANGE = true;
                 involvesTypeParameters_value = new_involvesTypeParameters_value; 
-                state().CIRCLE_INDEX++;
-            } while (state().CHANGE);
+                state.CIRCLE_INDEX++;
+            } while (state.CHANGE);
             if(isFinal && num == state().boundariesCrossed)
 {
             involvesTypeParameters_computed = true;
             }
             else {
-            state().RESET_CYCLE = true;
+            state.RESET_CYCLE = true;
             involvesTypeParameters_compute();
-            state().RESET_CYCLE = false;
+            state.RESET_CYCLE = false;
               involvesTypeParameters_computed = false;
               involvesTypeParameters_initialized = false;
             }
-            state().IN_CIRCLE = false; 
+            state.IN_CIRCLE = false; 
             return involvesTypeParameters_value;
         }
-        if(involvesTypeParameters_visited != state().CIRCLE_INDEX) {
-            involvesTypeParameters_visited = state().CIRCLE_INDEX;
-            if (state().RESET_CYCLE) {
+        if(involvesTypeParameters_visited != state.CIRCLE_INDEX) {
+            involvesTypeParameters_visited = state.CIRCLE_INDEX;
+            if (state.RESET_CYCLE) {
                 involvesTypeParameters_computed = false;
                 involvesTypeParameters_initialized = false;
+                involvesTypeParameters_visited = -1;
                 return involvesTypeParameters_value;
             }
             boolean new_involvesTypeParameters_value = involvesTypeParameters_compute();
             if (new_involvesTypeParameters_value!=involvesTypeParameters_value)
-                state().CHANGE = true;
+                state.CHANGE = true;
             involvesTypeParameters_value = new_involvesTypeParameters_value; 
             return involvesTypeParameters_value;
         }
@@ -538,6 +550,7 @@ public class TypeVariable extends ReferenceType implements Cloneable {
 
     // Declared in GenericTypeVariables.jrag at line 33
  @SuppressWarnings({"unchecked", "cast"})     public TypeDecl lowerBound() {
+        ASTNode$State state = state();
         TypeDecl lowerBound_value = lowerBound_compute();
         return lowerBound_value;
     }
@@ -546,6 +559,7 @@ public class TypeVariable extends ReferenceType implements Cloneable {
 
     // Declared in GenericTypeVariables.jrag at line 38
  @SuppressWarnings({"unchecked", "cast"})     public Collection memberMethods(String name) {
+        ASTNode$State state = state();
         Collection memberMethods_String_value = memberMethods_compute(name);
         return memberMethods_String_value;
     }
@@ -566,9 +580,11 @@ public class TypeVariable extends ReferenceType implements Cloneable {
  @SuppressWarnings({"unchecked", "cast"})     public SimpleSet memberFields(String name) {
         Object _parameters = name;
 if(memberFields_String_values == null) memberFields_String_values = new java.util.HashMap(4);
-        if(memberFields_String_values.containsKey(_parameters))
+        if(memberFields_String_values.containsKey(_parameters)) {
             return (SimpleSet)memberFields_String_values.get(_parameters);
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         SimpleSet memberFields_String_value = memberFields_compute(name);
         if(isFinal && num == state().boundariesCrossed)
@@ -592,9 +608,11 @@ if(memberFields_String_values == null) memberFields_String_values = new java.uti
  @SuppressWarnings({"unchecked", "cast"})     public boolean castingConversionTo(TypeDecl type) {
         Object _parameters = type;
 if(castingConversionTo_TypeDecl_values == null) castingConversionTo_TypeDecl_values = new java.util.HashMap(4);
-        if(castingConversionTo_TypeDecl_values.containsKey(_parameters))
+        if(castingConversionTo_TypeDecl_values.containsKey(_parameters)) {
             return ((Boolean)castingConversionTo_TypeDecl_values.get(_parameters)).booleanValue();
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         boolean castingConversionTo_TypeDecl_value = castingConversionTo_compute(type);
         if(isFinal && num == state().boundariesCrossed)
@@ -614,6 +632,7 @@ if(castingConversionTo_TypeDecl_values == null) castingConversionTo_TypeDecl_val
 
     // Declared in Generics.jrag at line 129
  @SuppressWarnings({"unchecked", "cast"})     public boolean isNestedType() {
+        ASTNode$State state = state();
         boolean isNestedType_value = isNestedType_compute();
         return isNestedType_value;
     }
@@ -622,9 +641,11 @@ if(castingConversionTo_TypeDecl_values == null) castingConversionTo_TypeDecl_val
 
     // Declared in Generics.jrag at line 319
  @SuppressWarnings({"unchecked", "cast"})     public TypeDecl erasure() {
-        if(erasure_computed)
+        if(erasure_computed) {
             return erasure_value;
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         erasure_value = erasure_compute();
         if(isFinal && num == state().boundariesCrossed)
@@ -636,9 +657,11 @@ if(castingConversionTo_TypeDecl_values == null) castingConversionTo_TypeDecl_val
 
     // Declared in Generics.jrag at line 530
  @SuppressWarnings({"unchecked", "cast"})     public String fullName() {
-        if(fullName_computed)
+        if(fullName_computed) {
             return fullName_value;
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         fullName_value = fullName_compute();
         if(isFinal && num == state().boundariesCrossed)
@@ -656,6 +679,7 @@ if(castingConversionTo_TypeDecl_values == null) castingConversionTo_TypeDecl_val
 
     // Declared in Generics.jrag at line 543
  @SuppressWarnings({"unchecked", "cast"})     public boolean sameSignature(Access a) {
+        ASTNode$State state = state();
         boolean sameSignature_Access_value = sameSignature_compute(a);
         return sameSignature_Access_value;
     }
@@ -666,9 +690,11 @@ if(castingConversionTo_TypeDecl_values == null) castingConversionTo_TypeDecl_val
     protected TypeDecl lubType_value;
     // Declared in Generics.jrag at line 774
  @SuppressWarnings({"unchecked", "cast"})     public TypeDecl lubType() {
-        if(lubType_computed)
+        if(lubType_computed) {
             return lubType_value;
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         lubType_value = lubType_compute();
         if(isFinal && num == state().boundariesCrossed)
@@ -683,55 +709,54 @@ if(castingConversionTo_TypeDecl_values == null) castingConversionTo_TypeDecl_val
     return lookupLUBType(list);
   }
 
-    protected int usesTypeVariable_visited;
-    protected boolean usesTypeVariable_computed = false;
-    protected boolean usesTypeVariable_initialized = false;
-    protected boolean usesTypeVariable_value;
+    // Declared in Generics.jrag at line 920
  @SuppressWarnings({"unchecked", "cast"})     public boolean usesTypeVariable() {
-        if(usesTypeVariable_computed)
+        if(usesTypeVariable_computed) {
             return usesTypeVariable_value;
+        }
+        ASTNode$State state = state();
         if (!usesTypeVariable_initialized) {
             usesTypeVariable_initialized = true;
             usesTypeVariable_value = false;
         }
-        if (!state().IN_CIRCLE) {
-            state().IN_CIRCLE = true;
-            int num = state().boundariesCrossed;
+        if (!state.IN_CIRCLE) {
+            state.IN_CIRCLE = true;
+            int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
-            state().CIRCLE_INDEX = 1;
             do {
-                usesTypeVariable_visited = state().CIRCLE_INDEX;
-                state().CHANGE = false;
+                usesTypeVariable_visited = state.CIRCLE_INDEX;
+                state.CHANGE = false;
                 boolean new_usesTypeVariable_value = usesTypeVariable_compute();
                 if (new_usesTypeVariable_value!=usesTypeVariable_value)
-                    state().CHANGE = true;
+                    state.CHANGE = true;
                 usesTypeVariable_value = new_usesTypeVariable_value; 
-                state().CIRCLE_INDEX++;
-            } while (state().CHANGE);
+                state.CIRCLE_INDEX++;
+            } while (state.CHANGE);
             if(isFinal && num == state().boundariesCrossed)
 {
             usesTypeVariable_computed = true;
             }
             else {
-            state().RESET_CYCLE = true;
+            state.RESET_CYCLE = true;
             usesTypeVariable_compute();
-            state().RESET_CYCLE = false;
+            state.RESET_CYCLE = false;
               usesTypeVariable_computed = false;
               usesTypeVariable_initialized = false;
             }
-            state().IN_CIRCLE = false; 
+            state.IN_CIRCLE = false; 
             return usesTypeVariable_value;
         }
-        if(usesTypeVariable_visited != state().CIRCLE_INDEX) {
-            usesTypeVariable_visited = state().CIRCLE_INDEX;
-            if (state().RESET_CYCLE) {
+        if(usesTypeVariable_visited != state.CIRCLE_INDEX) {
+            usesTypeVariable_visited = state.CIRCLE_INDEX;
+            if (state.RESET_CYCLE) {
                 usesTypeVariable_computed = false;
                 usesTypeVariable_initialized = false;
+                usesTypeVariable_visited = -1;
                 return usesTypeVariable_value;
             }
             boolean new_usesTypeVariable_value = usesTypeVariable_compute();
             if (new_usesTypeVariable_value!=usesTypeVariable_value)
-                state().CHANGE = true;
+                state.CHANGE = true;
             usesTypeVariable_value = new_usesTypeVariable_value; 
             return usesTypeVariable_value;
         }
@@ -744,9 +769,11 @@ if(castingConversionTo_TypeDecl_values == null) castingConversionTo_TypeDecl_val
  @SuppressWarnings({"unchecked", "cast"})     public boolean accessibleFrom(TypeDecl type) {
         Object _parameters = type;
 if(accessibleFrom_TypeDecl_values == null) accessibleFrom_TypeDecl_values = new java.util.HashMap(4);
-        if(accessibleFrom_TypeDecl_values.containsKey(_parameters))
+        if(accessibleFrom_TypeDecl_values.containsKey(_parameters)) {
             return ((Boolean)accessibleFrom_TypeDecl_values.get(_parameters)).booleanValue();
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         boolean accessibleFrom_TypeDecl_value = accessibleFrom_compute(type);
         if(isFinal && num == state().boundariesCrossed)
@@ -758,9 +785,11 @@ if(accessibleFrom_TypeDecl_values == null) accessibleFrom_TypeDecl_values = new 
 
     // Declared in Generics.jrag at line 1255
  @SuppressWarnings({"unchecked", "cast"})     public String typeName() {
-        if(typeName_computed)
+        if(typeName_computed) {
             return typeName_value;
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         typeName_value = typeName_compute();
         if(isFinal && num == state().boundariesCrossed)
@@ -772,6 +801,7 @@ if(accessibleFrom_TypeDecl_values == null) accessibleFrom_TypeDecl_values = new 
 
     // Declared in GenericsParTypeDecl.jrag at line 71
  @SuppressWarnings({"unchecked", "cast"})     public boolean isTypeVariable() {
+        ASTNode$State state = state();
         boolean isTypeVariable_value = isTypeVariable_compute();
         return isTypeVariable_value;
     }
@@ -780,6 +810,7 @@ if(accessibleFrom_TypeDecl_values == null) accessibleFrom_TypeDecl_values = new 
 
     // Declared in GenericsSubtype.jrag at line 49
  @SuppressWarnings({"unchecked", "cast"})     public boolean supertypeWildcard(WildcardType type) {
+        ASTNode$State state = state();
         boolean supertypeWildcard_WildcardType_value = supertypeWildcard_compute(type);
         return supertypeWildcard_WildcardType_value;
     }
@@ -788,6 +819,7 @@ if(accessibleFrom_TypeDecl_values == null) accessibleFrom_TypeDecl_values = new 
 
     // Declared in GenericsSubtype.jrag at line 60
  @SuppressWarnings({"unchecked", "cast"})     public boolean supertypeWildcardExtends(WildcardExtendsType type) {
+        ASTNode$State state = state();
         boolean supertypeWildcardExtends_WildcardExtendsType_value = supertypeWildcardExtends_compute(type);
         return supertypeWildcardExtends_WildcardExtendsType_value;
     }
@@ -796,69 +828,73 @@ if(accessibleFrom_TypeDecl_values == null) accessibleFrom_TypeDecl_values = new 
 
     // Declared in GenericsSubtype.jrag at line 69
  @SuppressWarnings({"unchecked", "cast"})     public boolean supertypeWildcardSuper(WildcardSuperType type) {
+        ASTNode$State state = state();
         boolean supertypeWildcardSuper_WildcardSuperType_value = supertypeWildcardSuper_compute(type);
         return supertypeWildcardSuper_WildcardSuperType_value;
     }
 
     private boolean supertypeWildcardSuper_compute(WildcardSuperType type) {  return type.superType().subtype(this);  }
 
-    protected java.util.Map sameStructure_TypeDecl_visited;
-    protected java.util.Set sameStructure_TypeDecl_computed = new java.util.HashSet(4);
-    protected java.util.Set sameStructure_TypeDecl_initialized = new java.util.HashSet(4);
-    protected java.util.Map sameStructure_TypeDecl_values = new java.util.HashMap(4);
+    // Declared in GenericsSubtype.jrag at line 215
  @SuppressWarnings({"unchecked", "cast"})     public boolean sameStructure(TypeDecl t) {
         Object _parameters = t;
-if(sameStructure_TypeDecl_visited == null) sameStructure_TypeDecl_visited = new java.util.HashMap(4);
 if(sameStructure_TypeDecl_values == null) sameStructure_TypeDecl_values = new java.util.HashMap(4);
-        if(sameStructure_TypeDecl_computed.contains(_parameters))
-            return ((Boolean)sameStructure_TypeDecl_values.get(_parameters)).booleanValue();
-        if (!sameStructure_TypeDecl_initialized.contains(_parameters)) {
-            sameStructure_TypeDecl_initialized.add(_parameters);
-            sameStructure_TypeDecl_values.put(_parameters, Boolean.valueOf(true));
+        ASTNode$State.CircularValue _value;
+        if(sameStructure_TypeDecl_values.containsKey(_parameters)) {
+            Object _o = sameStructure_TypeDecl_values.get(_parameters);
+            if(!(_o instanceof ASTNode$State.CircularValue)) {
+                return ((Boolean)_o).booleanValue();
+            }
+            else
+                _value = (ASTNode$State.CircularValue)_o;
         }
-        if (!state().IN_CIRCLE) {
-            state().IN_CIRCLE = true;
-            int num = state().boundariesCrossed;
+        else {
+            _value = new ASTNode$State.CircularValue();
+            sameStructure_TypeDecl_values.put(_parameters, _value);
+            _value.value = Boolean.valueOf(true);
+        }
+        ASTNode$State state = state();
+        if (!state.IN_CIRCLE) {
+            state.IN_CIRCLE = true;
+            int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
-            state().CIRCLE_INDEX = 1;
             boolean new_sameStructure_TypeDecl_value;
             do {
-                sameStructure_TypeDecl_visited.put(_parameters, new Integer(state().CIRCLE_INDEX));
-                state().CHANGE = false;
+                _value.visited = new Integer(state.CIRCLE_INDEX);
+                state.CHANGE = false;
                 new_sameStructure_TypeDecl_value = sameStructure_compute(t);
-                if (new_sameStructure_TypeDecl_value!=((Boolean)sameStructure_TypeDecl_values.get(_parameters)).booleanValue())
-                    state().CHANGE = true;
-                sameStructure_TypeDecl_values.put(_parameters, Boolean.valueOf(new_sameStructure_TypeDecl_value));
-                state().CIRCLE_INDEX++;
-            } while (state().CHANGE);
+                if (new_sameStructure_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
+                    state.CHANGE = true;
+                    _value.value = Boolean.valueOf(new_sameStructure_TypeDecl_value);
+                }
+                state.CIRCLE_INDEX++;
+            } while (state.CHANGE);
             if(isFinal && num == state().boundariesCrossed)
 {
-            sameStructure_TypeDecl_computed.add(_parameters);
+                sameStructure_TypeDecl_values.put(_parameters, new_sameStructure_TypeDecl_value);
             }
             else {
-            state().RESET_CYCLE = true;
+                sameStructure_TypeDecl_values.remove(_parameters);
+            state.RESET_CYCLE = true;
             sameStructure_compute(t);
-            state().RESET_CYCLE = false;
-            sameStructure_TypeDecl_computed.remove(_parameters);
-            sameStructure_TypeDecl_initialized.remove(_parameters);
+            state.RESET_CYCLE = false;
             }
-            state().IN_CIRCLE = false; 
+            state.IN_CIRCLE = false; 
             return new_sameStructure_TypeDecl_value;
         }
-        if(!new Integer(state().CIRCLE_INDEX).equals(sameStructure_TypeDecl_visited.get(_parameters))) {
-            sameStructure_TypeDecl_visited.put(_parameters, new Integer(state().CIRCLE_INDEX));
-            if (state().RESET_CYCLE) {
-                sameStructure_TypeDecl_computed.remove(_parameters);
-                sameStructure_TypeDecl_initialized.remove(_parameters);
-                return ((Boolean)sameStructure_TypeDecl_values.get(_parameters)).booleanValue();
-            }
+        if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
+            _value.visited = new Integer(state.CIRCLE_INDEX);
             boolean new_sameStructure_TypeDecl_value = sameStructure_compute(t);
-            if (new_sameStructure_TypeDecl_value!=((Boolean)sameStructure_TypeDecl_values.get(_parameters)).booleanValue())
-                state().CHANGE = true;
-            sameStructure_TypeDecl_values.put(_parameters, Boolean.valueOf(new_sameStructure_TypeDecl_value));
+            if (state.RESET_CYCLE) {
+                sameStructure_TypeDecl_values.remove(_parameters);
+            }
+            else if (new_sameStructure_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
+                state.CHANGE = true;
+                _value.value = new_sameStructure_TypeDecl_value;
+            }
             return new_sameStructure_TypeDecl_value;
         }
-        return ((Boolean)sameStructure_TypeDecl_values.get(_parameters)).booleanValue();
+        return ((Boolean)_value.value).booleanValue();
     }
 
     private boolean sameStructure_compute(TypeDecl t) {
@@ -882,6 +918,7 @@ if(sameStructure_TypeDecl_values == null) sameStructure_TypeDecl_values = new ja
 
     // Declared in GenericsSubtype.jrag at line 282
  @SuppressWarnings({"unchecked", "cast"})     public boolean supertypeArrayDecl(ArrayDecl type) {
+        ASTNode$State state = state();
         boolean supertypeArrayDecl_ArrayDecl_value = supertypeArrayDecl_compute(type);
         return supertypeArrayDecl_ArrayDecl_value;
     }
@@ -894,69 +931,73 @@ if(sameStructure_TypeDecl_values == null) sameStructure_TypeDecl_values = new ja
     return false;
   }
 
-    protected java.util.Map subtype_TypeDecl_visited;
-    protected java.util.Set subtype_TypeDecl_computed = new java.util.HashSet(4);
-    protected java.util.Set subtype_TypeDecl_initialized = new java.util.HashSet(4);
-    protected java.util.Map subtype_TypeDecl_values = new java.util.HashMap(4);
+    // Declared in GenericsSubtype.jrag at line 290
  @SuppressWarnings({"unchecked", "cast"})     public boolean subtype(TypeDecl type) {
         Object _parameters = type;
-if(subtype_TypeDecl_visited == null) subtype_TypeDecl_visited = new java.util.HashMap(4);
 if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.HashMap(4);
-        if(subtype_TypeDecl_computed.contains(_parameters))
-            return ((Boolean)subtype_TypeDecl_values.get(_parameters)).booleanValue();
-        if (!subtype_TypeDecl_initialized.contains(_parameters)) {
-            subtype_TypeDecl_initialized.add(_parameters);
-            subtype_TypeDecl_values.put(_parameters, Boolean.valueOf(true));
+        ASTNode$State.CircularValue _value;
+        if(subtype_TypeDecl_values.containsKey(_parameters)) {
+            Object _o = subtype_TypeDecl_values.get(_parameters);
+            if(!(_o instanceof ASTNode$State.CircularValue)) {
+                return ((Boolean)_o).booleanValue();
+            }
+            else
+                _value = (ASTNode$State.CircularValue)_o;
         }
-        if (!state().IN_CIRCLE) {
-            state().IN_CIRCLE = true;
-            int num = state().boundariesCrossed;
+        else {
+            _value = new ASTNode$State.CircularValue();
+            subtype_TypeDecl_values.put(_parameters, _value);
+            _value.value = Boolean.valueOf(true);
+        }
+        ASTNode$State state = state();
+        if (!state.IN_CIRCLE) {
+            state.IN_CIRCLE = true;
+            int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
-            state().CIRCLE_INDEX = 1;
             boolean new_subtype_TypeDecl_value;
             do {
-                subtype_TypeDecl_visited.put(_parameters, new Integer(state().CIRCLE_INDEX));
-                state().CHANGE = false;
+                _value.visited = new Integer(state.CIRCLE_INDEX);
+                state.CHANGE = false;
                 new_subtype_TypeDecl_value = subtype_compute(type);
-                if (new_subtype_TypeDecl_value!=((Boolean)subtype_TypeDecl_values.get(_parameters)).booleanValue())
-                    state().CHANGE = true;
-                subtype_TypeDecl_values.put(_parameters, Boolean.valueOf(new_subtype_TypeDecl_value));
-                state().CIRCLE_INDEX++;
-            } while (state().CHANGE);
+                if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
+                    state.CHANGE = true;
+                    _value.value = Boolean.valueOf(new_subtype_TypeDecl_value);
+                }
+                state.CIRCLE_INDEX++;
+            } while (state.CHANGE);
             if(isFinal && num == state().boundariesCrossed)
 {
-            subtype_TypeDecl_computed.add(_parameters);
+                subtype_TypeDecl_values.put(_parameters, new_subtype_TypeDecl_value);
             }
             else {
-            state().RESET_CYCLE = true;
+                subtype_TypeDecl_values.remove(_parameters);
+            state.RESET_CYCLE = true;
             subtype_compute(type);
-            state().RESET_CYCLE = false;
-            subtype_TypeDecl_computed.remove(_parameters);
-            subtype_TypeDecl_initialized.remove(_parameters);
+            state.RESET_CYCLE = false;
             }
-            state().IN_CIRCLE = false; 
+            state.IN_CIRCLE = false; 
             return new_subtype_TypeDecl_value;
         }
-        if(!new Integer(state().CIRCLE_INDEX).equals(subtype_TypeDecl_visited.get(_parameters))) {
-            subtype_TypeDecl_visited.put(_parameters, new Integer(state().CIRCLE_INDEX));
-            if (state().RESET_CYCLE) {
-                subtype_TypeDecl_computed.remove(_parameters);
-                subtype_TypeDecl_initialized.remove(_parameters);
-                return ((Boolean)subtype_TypeDecl_values.get(_parameters)).booleanValue();
-            }
+        if(!new Integer(state.CIRCLE_INDEX).equals(_value.visited)) {
+            _value.visited = new Integer(state.CIRCLE_INDEX);
             boolean new_subtype_TypeDecl_value = subtype_compute(type);
-            if (new_subtype_TypeDecl_value!=((Boolean)subtype_TypeDecl_values.get(_parameters)).booleanValue())
-                state().CHANGE = true;
-            subtype_TypeDecl_values.put(_parameters, Boolean.valueOf(new_subtype_TypeDecl_value));
+            if (state.RESET_CYCLE) {
+                subtype_TypeDecl_values.remove(_parameters);
+            }
+            else if (new_subtype_TypeDecl_value!=((Boolean)_value.value).booleanValue()) {
+                state.CHANGE = true;
+                _value.value = new_subtype_TypeDecl_value;
+            }
             return new_subtype_TypeDecl_value;
         }
-        return ((Boolean)subtype_TypeDecl_values.get(_parameters)).booleanValue();
+        return ((Boolean)_value.value).booleanValue();
     }
 
     private boolean subtype_compute(TypeDecl type) {  return type.supertypeTypeVariable(this);  }
 
     // Declared in GenericsSubtype.jrag at line 299
  @SuppressWarnings({"unchecked", "cast"})     public boolean supertypeTypeVariable(TypeVariable type) {
+        ASTNode$State state = state();
         boolean supertypeTypeVariable_TypeVariable_value = supertypeTypeVariable_compute(type);
         return supertypeTypeVariable_TypeVariable_value;
     }
@@ -980,12 +1021,14 @@ if(subtype_TypeDecl_values == null) subtype_TypeDecl_values = new java.util.Hash
     // Declared in GenericsSubtype.jrag at line 314
  @SuppressWarnings({"unchecked", "cast"})     public Access getSubstitutedTypeBound(int i, TypeDecl type) {
         java.util.List _parameters = new java.util.ArrayList(2);
-        _parameters.add(new Integer(i));
+        _parameters.add(Integer.valueOf(i));
         _parameters.add(type);
 if(getSubstitutedTypeBound_int_TypeDecl_values == null) getSubstitutedTypeBound_int_TypeDecl_values = new java.util.HashMap(4);
-        if(getSubstitutedTypeBound_int_TypeDecl_values.containsKey(_parameters))
+        if(getSubstitutedTypeBound_int_TypeDecl_values.containsKey(_parameters)) {
             return (Access)getSubstitutedTypeBound_int_TypeDecl_values.get(_parameters);
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         Access getSubstitutedTypeBound_int_TypeDecl_value = getSubstitutedTypeBound_compute(i, type);
         if(isFinal && num == state().boundariesCrossed)
@@ -1014,6 +1057,7 @@ if(getSubstitutedTypeBound_int_TypeDecl_values == null) getSubstitutedTypeBound_
 
     // Declared in GenericsSubtype.jrag at line 333
  @SuppressWarnings({"unchecked", "cast"})     public boolean supertypeClassDecl(ClassDecl type) {
+        ASTNode$State state = state();
         boolean supertypeClassDecl_ClassDecl_value = supertypeClassDecl_compute(type);
         return supertypeClassDecl_ClassDecl_value;
     }
@@ -1027,6 +1071,7 @@ if(getSubstitutedTypeBound_int_TypeDecl_values == null) getSubstitutedTypeBound_
 
     // Declared in GenericsSubtype.jrag at line 339
  @SuppressWarnings({"unchecked", "cast"})     public boolean supertypeInterfaceDecl(InterfaceDecl type) {
+        ASTNode$State state = state();
         boolean supertypeInterfaceDecl_InterfaceDecl_value = supertypeInterfaceDecl_compute(type);
         return supertypeInterfaceDecl_InterfaceDecl_value;
     }
@@ -1042,9 +1087,11 @@ if(getSubstitutedTypeBound_int_TypeDecl_values == null) getSubstitutedTypeBound_
  @SuppressWarnings({"unchecked", "cast"})     public boolean instanceOf(TypeDecl type) {
         Object _parameters = type;
 if(instanceOf_TypeDecl_values == null) instanceOf_TypeDecl_values = new java.util.HashMap(4);
-        if(instanceOf_TypeDecl_values.containsKey(_parameters))
+        if(instanceOf_TypeDecl_values.containsKey(_parameters)) {
             return ((Boolean)instanceOf_TypeDecl_values.get(_parameters)).booleanValue();
-        int num = state().boundariesCrossed;
+        }
+        ASTNode$State state = state();
+        int num = state.boundariesCrossed;
         boolean isFinal = this.is$Final();
         boolean instanceOf_TypeDecl_value = instanceOf_compute(type);
         if(isFinal && num == state().boundariesCrossed)
@@ -1056,12 +1103,14 @@ if(instanceOf_TypeDecl_values == null) instanceOf_TypeDecl_values = new java.uti
 
     // Declared in Generics.jrag at line 772
  @SuppressWarnings({"unchecked", "cast"})     public TypeDecl typeObject() {
+        ASTNode$State state = state();
         TypeDecl typeObject_value = getParent().Define_TypeDecl_typeObject(this, null);
         return typeObject_value;
     }
 
     // Declared in Generics.jrag at line 814
  @SuppressWarnings({"unchecked", "cast"})     public TypeDecl typeNull() {
+        ASTNode$State state = state();
         TypeDecl typeNull_value = getParent().Define_TypeDecl_typeNull(this, null);
         return typeNull_value;
     }
